TigerParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 ./albert22u/Tiger.g 2016-02-22 19:36:22

import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class TigerParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "STRING", "INT", "ID", "NEWLINE", "WS", "COMMENT", "'-'", "'('", "')'", "':='", "'{'", "'}'", "';'", "','", "'='", "'.'", "'['", "']'", "':'", "'|'", "'&'", "'<'", "'>'", "'+'", "'*'", "'/'", "'array'", "'break'", "'do'", "'else'", "'end'", "'for'", "'function'", "'if'", "'in'", "'nil'", "'let'", "'of'", "'then'", "'to'", "'type'", "'var'", "'while'", "'typedef'", "'block'"
    };
    public static final int EOF=-1;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int STRING=4;
    public static final int INT=5;
    public static final int ID=6;
    public static final int NEWLINE=7;
    public static final int WS=8;
    public static final int COMMENT=9;

    // delegates
    // delegators


        public TigerParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TigerParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return TigerParser.tokenNames; }
    public String getGrammarFileName() { return "./albert22u/Tiger.g"; }


    /** Map variable name to Integer object holding value */
    HashMap<String,Integer>  memory = new HashMap<String,Integer>();


    public static class tiger_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "tiger"
    // ./albert22u/Tiger.g:18:1: tiger : expr ;
    public final TigerParser.tiger_return tiger() throws RecognitionException {
        TigerParser.tiger_return retval = new TigerParser.tiger_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        TigerParser.expr_return expr1 = null;



        try {
            // ./albert22u/Tiger.g:18:7: ( expr )
            // ./albert22u/Tiger.g:18:9: expr
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_expr_in_tiger42);
            expr1=expr();

            state._fsp--;

            adaptor.addChild(root_0, expr1.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "tiger"

    public static class expr2_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expr2"
    // ./albert22u/Tiger.g:21:1: expr2 : ( binary_operator expr expr2 | );
    public final TigerParser.expr2_return expr2() throws RecognitionException {
        TigerParser.expr2_return retval = new TigerParser.expr2_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        TigerParser.binary_operator_return binary_operator2 = null;

        TigerParser.expr_return expr3 = null;

        TigerParser.expr2_return expr24 = null;



        try {
            // ./albert22u/Tiger.g:21:7: ( binary_operator expr expr2 | )
            int alt1=2;
            alt1 = dfa1.predict(input);
            switch (alt1) {
                case 1 :
                    // ./albert22u/Tiger.g:21:11: binary_operator expr expr2
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_binary_operator_in_expr253);
                    binary_operator2=binary_operator();

                    state._fsp--;

                    adaptor.addChild(root_0, binary_operator2.getTree());
                    pushFollow(FOLLOW_expr_in_expr255);
                    expr3=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, expr3.getTree());
                    pushFollow(FOLLOW_expr2_in_expr257);
                    expr24=expr2();

                    state._fsp--;

                    adaptor.addChild(root_0, expr24.getTree());

                    }
                    break;
                case 2 :
                    // ./albert22u/Tiger.g:23:2: 
                    {
                    root_0 = (Object)adaptor.nil();

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expr2"

    public static class expr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expr"
    // ./albert22u/Tiger.g:24:1: expr : ( STRING expr2 | INT expr2 | nilexp expr2 | '-' expr expr2 | ID lvalue | '(' ( expr_seq )? ')' expr2 | ifexp COND= expr thenexp DO= expr ELSE= else_ou_pas_else expr2 | whileexp expr doexp expr expr2 | forexp ID ':=' INIT= expr toexp DEST= expr doexp NEWLINE boucle= expr SUITE= expr2 | breakexp expr2 | letexp declaration_list inexp ( expr_seq )* endexp expr2 | declaration expr2 | NEWLINE expr );
    public final TigerParser.expr_return expr() throws RecognitionException {
        TigerParser.expr_return retval = new TigerParser.expr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token STRING5=null;
        Token INT7=null;
        Token char_literal11=null;
        Token ID14=null;
        Token char_literal16=null;
        Token char_literal18=null;
        Token ID29=null;
        Token string_literal30=null;
        Token NEWLINE33=null;
        Token NEWLINE44=null;
        TigerParser.expr_return COND = null;

        TigerParser.expr_return DO = null;

        TigerParser.else_ou_pas_else_return ELSE = null;

        TigerParser.expr_return INIT = null;

        TigerParser.expr_return DEST = null;

        TigerParser.expr_return boucle = null;

        TigerParser.expr2_return SUITE = null;

        TigerParser.expr_return expr26 = null;

        TigerParser.expr2_return expr28 = null;

        TigerParser.nilexp_return nilexp9 = null;

        TigerParser.expr2_return expr210 = null;

        TigerParser.expr_return expr12 = null;

        TigerParser.expr2_return expr213 = null;

        TigerParser.lvalue_return lvalue15 = null;

        TigerParser.expr_seq_return expr_seq17 = null;

        TigerParser.expr2_return expr219 = null;

        TigerParser.ifexp_return ifexp20 = null;

        TigerParser.thenexp_return thenexp21 = null;

        TigerParser.expr2_return expr222 = null;

        TigerParser.whileexp_return whileexp23 = null;

        TigerParser.expr_return expr24 = null;

        TigerParser.doexp_return doexp25 = null;

        TigerParser.expr2_return expr227 = null;

        TigerParser.forexp_return forexp28 = null;

        TigerParser.toexp_return toexp31 = null;

        TigerParser.doexp_return doexp32 = null;

        TigerParser.breakexp_return breakexp34 = null;

        TigerParser.expr2_return expr235 = null;

        TigerParser.letexp_return letexp36 = null;

        TigerParser.declaration_list_return declaration_list37 = null;

        TigerParser.inexp_return inexp38 = null;

        TigerParser.expr_seq_return expr_seq39 = null;

        TigerParser.endexp_return endexp40 = null;

        TigerParser.expr2_return expr241 = null;

        TigerParser.declaration_return declaration42 = null;

        TigerParser.expr2_return expr243 = null;

        TigerParser.expr_return expr45 = null;


        Object STRING5_tree=null;
        Object INT7_tree=null;
        Object char_literal11_tree=null;
        Object ID14_tree=null;
        Object char_literal16_tree=null;
        Object char_literal18_tree=null;
        Object ID29_tree=null;
        Object string_literal30_tree=null;
        Object NEWLINE33_tree=null;
        Object NEWLINE44_tree=null;

        try {
            // ./albert22u/Tiger.g:24:6: ( STRING expr2 | INT expr2 | nilexp expr2 | '-' expr expr2 | ID lvalue | '(' ( expr_seq )? ')' expr2 | ifexp COND= expr thenexp DO= expr ELSE= else_ou_pas_else expr2 | whileexp expr doexp expr expr2 | forexp ID ':=' INIT= expr toexp DEST= expr doexp NEWLINE boucle= expr SUITE= expr2 | breakexp expr2 | letexp declaration_list inexp ( expr_seq )* endexp expr2 | declaration expr2 | NEWLINE expr )
            int alt4=13;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // ./albert22u/Tiger.g:24:8: STRING expr2
                    {
                    root_0 = (Object)adaptor.nil();

                    STRING5=(Token)match(input,STRING,FOLLOW_STRING_in_expr69); 
                    STRING5_tree = (Object)adaptor.create(STRING5);
                    adaptor.addChild(root_0, STRING5_tree);

                    pushFollow(FOLLOW_expr2_in_expr71);
                    expr26=expr2();

                    state._fsp--;

                    adaptor.addChild(root_0, expr26.getTree());

                    }
                    break;
                case 2 :
                    // ./albert22u/Tiger.g:25:4: INT expr2
                    {
                    root_0 = (Object)adaptor.nil();

                    INT7=(Token)match(input,INT,FOLLOW_INT_in_expr76); 
                    INT7_tree = (Object)adaptor.create(INT7);
                    adaptor.addChild(root_0, INT7_tree);

                    pushFollow(FOLLOW_expr2_in_expr78);
                    expr28=expr2();

                    state._fsp--;

                    adaptor.addChild(root_0, expr28.getTree());

                    }
                    break;
                case 3 :
                    // ./albert22u/Tiger.g:26:4: nilexp expr2
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_nilexp_in_expr83);
                    nilexp9=nilexp();

                    state._fsp--;

                    adaptor.addChild(root_0, nilexp9.getTree());
                    pushFollow(FOLLOW_expr2_in_expr85);
                    expr210=expr2();

                    state._fsp--;

                    adaptor.addChild(root_0, expr210.getTree());

                    }
                    break;
                case 4 :
                    // ./albert22u/Tiger.g:27:4: '-' expr expr2
                    {
                    root_0 = (Object)adaptor.nil();

                    char_literal11=(Token)match(input,10,FOLLOW_10_in_expr90); 
                    char_literal11_tree = (Object)adaptor.create(char_literal11);
                    adaptor.addChild(root_0, char_literal11_tree);

                    pushFollow(FOLLOW_expr_in_expr92);
                    expr12=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, expr12.getTree());
                    pushFollow(FOLLOW_expr2_in_expr94);
                    expr213=expr2();

                    state._fsp--;

                    adaptor.addChild(root_0, expr213.getTree());

                    }
                    break;
                case 5 :
                    // ./albert22u/Tiger.g:28:4: ID lvalue
                    {
                    root_0 = (Object)adaptor.nil();

                    ID14=(Token)match(input,ID,FOLLOW_ID_in_expr99); 
                    ID14_tree = (Object)adaptor.create(ID14);
                    adaptor.addChild(root_0, ID14_tree);

                    pushFollow(FOLLOW_lvalue_in_expr101);
                    lvalue15=lvalue();

                    state._fsp--;

                    adaptor.addChild(root_0, lvalue15.getTree());

                    }
                    break;
                case 6 :
                    // ./albert22u/Tiger.g:29:4: '(' ( expr_seq )? ')' expr2
                    {
                    root_0 = (Object)adaptor.nil();

                    char_literal16=(Token)match(input,11,FOLLOW_11_in_expr106); 
                    char_literal16_tree = (Object)adaptor.create(char_literal16);
                    adaptor.addChild(root_0, char_literal16_tree);

                    // ./albert22u/Tiger.g:29:8: ( expr_seq )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( ((LA2_0>=STRING && LA2_0<=NEWLINE)||(LA2_0>=10 && LA2_0<=11)||LA2_0==31||(LA2_0>=35 && LA2_0<=37)||(LA2_0>=39 && LA2_0<=40)||(LA2_0>=44 && LA2_0<=46)) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // ./albert22u/Tiger.g:29:8: expr_seq
                            {
                            pushFollow(FOLLOW_expr_seq_in_expr108);
                            expr_seq17=expr_seq();

                            state._fsp--;

                            adaptor.addChild(root_0, expr_seq17.getTree());

                            }
                            break;

                    }

                    char_literal18=(Token)match(input,12,FOLLOW_12_in_expr111); 
                    char_literal18_tree = (Object)adaptor.create(char_literal18);
                    adaptor.addChild(root_0, char_literal18_tree);

                    pushFollow(FOLLOW_expr2_in_expr113);
                    expr219=expr2();

                    state._fsp--;

                    adaptor.addChild(root_0, expr219.getTree());

                    }
                    break;
                case 7 :
                    // ./albert22u/Tiger.g:30:4: ifexp COND= expr thenexp DO= expr ELSE= else_ou_pas_else expr2
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_ifexp_in_expr118);
                    ifexp20=ifexp();

                    state._fsp--;

                    adaptor.addChild(root_0, ifexp20.getTree());
                    pushFollow(FOLLOW_expr_in_expr122);
                    COND=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, COND.getTree());
                    pushFollow(FOLLOW_thenexp_in_expr124);
                    thenexp21=thenexp();

                    state._fsp--;

                    adaptor.addChild(root_0, thenexp21.getTree());
                    pushFollow(FOLLOW_expr_in_expr128);
                    DO=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, DO.getTree());
                    pushFollow(FOLLOW_else_ou_pas_else_in_expr132);
                    ELSE=else_ou_pas_else();

                    state._fsp--;

                    adaptor.addChild(root_0, ELSE.getTree());
                    pushFollow(FOLLOW_expr2_in_expr134);
                    expr222=expr2();

                    state._fsp--;

                    adaptor.addChild(root_0, expr222.getTree());

                    }
                    break;
                case 8 :
                    // ./albert22u/Tiger.g:31:4: whileexp expr doexp expr expr2
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_whileexp_in_expr140);
                    whileexp23=whileexp();

                    state._fsp--;

                    adaptor.addChild(root_0, whileexp23.getTree());
                    pushFollow(FOLLOW_expr_in_expr142);
                    expr24=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, expr24.getTree());
                    pushFollow(FOLLOW_doexp_in_expr144);
                    doexp25=doexp();

                    state._fsp--;

                    adaptor.addChild(root_0, doexp25.getTree());
                    pushFollow(FOLLOW_expr_in_expr146);
                    expr26=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, expr26.getTree());
                    pushFollow(FOLLOW_expr2_in_expr148);
                    expr227=expr2();

                    state._fsp--;

                    adaptor.addChild(root_0, expr227.getTree());

                    }
                    break;
                case 9 :
                    // ./albert22u/Tiger.g:32:4: forexp ID ':=' INIT= expr toexp DEST= expr doexp NEWLINE boucle= expr SUITE= expr2
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_forexp_in_expr153);
                    forexp28=forexp();

                    state._fsp--;

                    adaptor.addChild(root_0, forexp28.getTree());
                    ID29=(Token)match(input,ID,FOLLOW_ID_in_expr155); 
                    ID29_tree = (Object)adaptor.create(ID29);
                    adaptor.addChild(root_0, ID29_tree);

                    string_literal30=(Token)match(input,13,FOLLOW_13_in_expr157); 
                    string_literal30_tree = (Object)adaptor.create(string_literal30);
                    adaptor.addChild(root_0, string_literal30_tree);

                    pushFollow(FOLLOW_expr_in_expr161);
                    INIT=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, INIT.getTree());
                    pushFollow(FOLLOW_toexp_in_expr163);
                    toexp31=toexp();

                    state._fsp--;

                    adaptor.addChild(root_0, toexp31.getTree());
                    pushFollow(FOLLOW_expr_in_expr169);
                    DEST=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, DEST.getTree());
                    pushFollow(FOLLOW_doexp_in_expr171);
                    doexp32=doexp();

                    state._fsp--;

                    adaptor.addChild(root_0, doexp32.getTree());
                    NEWLINE33=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_expr173); 
                    NEWLINE33_tree = (Object)adaptor.create(NEWLINE33);
                    adaptor.addChild(root_0, NEWLINE33_tree);

                    pushFollow(FOLLOW_expr_in_expr179);
                    boucle=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, boucle.getTree());
                    pushFollow(FOLLOW_expr2_in_expr185);
                    SUITE=expr2();

                    state._fsp--;

                    adaptor.addChild(root_0, SUITE.getTree());

                    }
                    break;
                case 10 :
                    // ./albert22u/Tiger.g:33:4: breakexp expr2
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_breakexp_in_expr191);
                    breakexp34=breakexp();

                    state._fsp--;

                    adaptor.addChild(root_0, breakexp34.getTree());
                    pushFollow(FOLLOW_expr2_in_expr193);
                    expr235=expr2();

                    state._fsp--;

                    adaptor.addChild(root_0, expr235.getTree());

                    }
                    break;
                case 11 :
                    // ./albert22u/Tiger.g:34:4: letexp declaration_list inexp ( expr_seq )* endexp expr2
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_letexp_in_expr198);
                    letexp36=letexp();

                    state._fsp--;

                    adaptor.addChild(root_0, letexp36.getTree());
                    pushFollow(FOLLOW_declaration_list_in_expr200);
                    declaration_list37=declaration_list();

                    state._fsp--;

                    adaptor.addChild(root_0, declaration_list37.getTree());
                    pushFollow(FOLLOW_inexp_in_expr202);
                    inexp38=inexp();

                    state._fsp--;

                    adaptor.addChild(root_0, inexp38.getTree());
                    // ./albert22u/Tiger.g:34:34: ( expr_seq )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( ((LA3_0>=STRING && LA3_0<=NEWLINE)||(LA3_0>=10 && LA3_0<=11)||LA3_0==31||(LA3_0>=35 && LA3_0<=37)||(LA3_0>=39 && LA3_0<=40)||(LA3_0>=44 && LA3_0<=46)) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // ./albert22u/Tiger.g:34:34: expr_seq
                    	    {
                    	    pushFollow(FOLLOW_expr_seq_in_expr204);
                    	    expr_seq39=expr_seq();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, expr_seq39.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);

                    pushFollow(FOLLOW_endexp_in_expr207);
                    endexp40=endexp();

                    state._fsp--;

                    adaptor.addChild(root_0, endexp40.getTree());
                    pushFollow(FOLLOW_expr2_in_expr209);
                    expr241=expr2();

                    state._fsp--;

                    adaptor.addChild(root_0, expr241.getTree());

                    }
                    break;
                case 12 :
                    // ./albert22u/Tiger.g:35:4: declaration expr2
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_declaration_in_expr215);
                    declaration42=declaration();

                    state._fsp--;

                    adaptor.addChild(root_0, declaration42.getTree());
                    pushFollow(FOLLOW_expr2_in_expr217);
                    expr243=expr2();

                    state._fsp--;

                    adaptor.addChild(root_0, expr243.getTree());

                    }
                    break;
                case 13 :
                    // ./albert22u/Tiger.g:36:4: NEWLINE expr
                    {
                    root_0 = (Object)adaptor.nil();

                    NEWLINE44=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_expr222); 
                    NEWLINE44_tree = (Object)adaptor.create(NEWLINE44);
                    adaptor.addChild(root_0, NEWLINE44_tree);

                    pushFollow(FOLLOW_expr_in_expr224);
                    expr45=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, expr45.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expr"

    public static class parenthese_ou_accolade_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "parenthese_ou_accolade"
    // ./albert22u/Tiger.g:41:1: parenthese_ou_accolade : ( '(' ( expr_list )? ')' expr2 | '{' ( field_list )? '}' expr2 );
    public final TigerParser.parenthese_ou_accolade_return parenthese_ou_accolade() throws RecognitionException {
        TigerParser.parenthese_ou_accolade_return retval = new TigerParser.parenthese_ou_accolade_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal46=null;
        Token char_literal48=null;
        Token char_literal50=null;
        Token char_literal52=null;
        TigerParser.expr_list_return expr_list47 = null;

        TigerParser.expr2_return expr249 = null;

        TigerParser.field_list_return field_list51 = null;

        TigerParser.expr2_return expr253 = null;


        Object char_literal46_tree=null;
        Object char_literal48_tree=null;
        Object char_literal50_tree=null;
        Object char_literal52_tree=null;

        try {
            // ./albert22u/Tiger.g:42:2: ( '(' ( expr_list )? ')' expr2 | '{' ( field_list )? '}' expr2 )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==11) ) {
                alt7=1;
            }
            else if ( (LA7_0==14) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // ./albert22u/Tiger.g:42:5: '(' ( expr_list )? ')' expr2
                    {
                    root_0 = (Object)adaptor.nil();

                    char_literal46=(Token)match(input,11,FOLLOW_11_in_parenthese_ou_accolade239); 
                    char_literal46_tree = (Object)adaptor.create(char_literal46);
                    adaptor.addChild(root_0, char_literal46_tree);

                    // ./albert22u/Tiger.g:42:9: ( expr_list )?
                    int alt5=2;
                    int LA5_0 = input.LA(1);

                    if ( ((LA5_0>=STRING && LA5_0<=NEWLINE)||(LA5_0>=10 && LA5_0<=11)||LA5_0==31||(LA5_0>=35 && LA5_0<=37)||(LA5_0>=39 && LA5_0<=40)||(LA5_0>=44 && LA5_0<=46)) ) {
                        alt5=1;
                    }
                    switch (alt5) {
                        case 1 :
                            // ./albert22u/Tiger.g:42:9: expr_list
                            {
                            pushFollow(FOLLOW_expr_list_in_parenthese_ou_accolade241);
                            expr_list47=expr_list();

                            state._fsp--;

                            adaptor.addChild(root_0, expr_list47.getTree());

                            }
                            break;

                    }

                    char_literal48=(Token)match(input,12,FOLLOW_12_in_parenthese_ou_accolade244); 
                    char_literal48_tree = (Object)adaptor.create(char_literal48);
                    adaptor.addChild(root_0, char_literal48_tree);

                    pushFollow(FOLLOW_expr2_in_parenthese_ou_accolade246);
                    expr249=expr2();

                    state._fsp--;

                    adaptor.addChild(root_0, expr249.getTree());

                    }
                    break;
                case 2 :
                    // ./albert22u/Tiger.g:43:4: '{' ( field_list )? '}' expr2
                    {
                    root_0 = (Object)adaptor.nil();

                    char_literal50=(Token)match(input,14,FOLLOW_14_in_parenthese_ou_accolade251); 
                    char_literal50_tree = (Object)adaptor.create(char_literal50);
                    adaptor.addChild(root_0, char_literal50_tree);

                    // ./albert22u/Tiger.g:43:8: ( field_list )?
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==ID) ) {
                        alt6=1;
                    }
                    switch (alt6) {
                        case 1 :
                            // ./albert22u/Tiger.g:43:8: field_list
                            {
                            pushFollow(FOLLOW_field_list_in_parenthese_ou_accolade253);
                            field_list51=field_list();

                            state._fsp--;

                            adaptor.addChild(root_0, field_list51.getTree());

                            }
                            break;

                    }

                    char_literal52=(Token)match(input,15,FOLLOW_15_in_parenthese_ou_accolade256); 
                    char_literal52_tree = (Object)adaptor.create(char_literal52);
                    adaptor.addChild(root_0, char_literal52_tree);

                    pushFollow(FOLLOW_expr2_in_parenthese_ou_accolade258);
                    expr253=expr2();

                    state._fsp--;

                    adaptor.addChild(root_0, expr253.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "parenthese_ou_accolade"

    public static class else_ou_pas_else_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "else_ou_pas_else"
    // ./albert22u/Tiger.g:46:1: else_ou_pas_else : ( elseexp expr | );
    public final TigerParser.else_ou_pas_else_return else_ou_pas_else() throws RecognitionException {
        TigerParser.else_ou_pas_else_return retval = new TigerParser.else_ou_pas_else_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        TigerParser.elseexp_return elseexp54 = null;

        TigerParser.expr_return expr55 = null;



        try {
            // ./albert22u/Tiger.g:47:2: ( elseexp expr | )
            int alt8=2;
            alt8 = dfa8.predict(input);
            switch (alt8) {
                case 1 :
                    // ./albert22u/Tiger.g:47:4: elseexp expr
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_elseexp_in_else_ou_pas_else270);
                    elseexp54=elseexp();

                    state._fsp--;

                    adaptor.addChild(root_0, elseexp54.getTree());
                    pushFollow(FOLLOW_expr_in_else_ou_pas_else272);
                    expr55=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, expr55.getTree());

                    }
                    break;
                case 2 :
                    // ./albert22u/Tiger.g:49:1: 
                    {
                    root_0 = (Object)adaptor.nil();

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "else_ou_pas_else"

    public static class affect_ou_pas_affect_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "affect_ou_pas_affect"
    // ./albert22u/Tiger.g:51:1: affect_ou_pas_affect : ( ':=' expr | );
    public final TigerParser.affect_ou_pas_affect_return affect_ou_pas_affect() throws RecognitionException {
        TigerParser.affect_ou_pas_affect_return retval = new TigerParser.affect_ou_pas_affect_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal56=null;
        TigerParser.expr_return expr57 = null;


        Object string_literal56_tree=null;

        try {
            // ./albert22u/Tiger.g:52:2: ( ':=' expr | )
            int alt9=2;
            alt9 = dfa9.predict(input);
            switch (alt9) {
                case 1 :
                    // ./albert22u/Tiger.g:52:4: ':=' expr
                    {
                    root_0 = (Object)adaptor.nil();
